--- a/css/index.css
+++ b/css/index.css
@@ -1,1 +1,3 @@
+@import url("https://fonts.googleapis.com/css?family=Roboto&display=swap");
+@import url(global.css);
 @import url(index.section-categories.partial.css);
