add title colour to global.css

--- a/css/index.css
+++ b/css/index.css
@@ -3,3 +3,4 @@
 @import url(global.css);
 @import url(index.section-categories.partial.css);
 @import url(index.section-benefits.css);
+@import url(about_us.section-our_events.css)
