--- a/css/about_us.css
+++ b/css/about_us.css
@@ -1,2 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Cormorant+Infant:wght@300;400;500&family=Cormorant+Upright&family=Spectral:wght@300;400;500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Spectral:ital,wght@0,700;1,300&display=swap');
 @import url(global.css);
 @import url(about_us.section-our_events.css);
