--- a/css/about_us.css
+++ b/css/about_us.css
@@ -2,3 +2,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Spectral:ital,wght@0,700;1,300&display=swap');
 @import url(global.css);
 @import url(about_us.section-our_events.css);
+@import url(about_us.section-our_partners.css);
