--- a/css/index.css
+++ b/css/index.css
@@ -3,3 +3,4 @@
 @import url(global.css);
 @import url(index.section-categories.partial.css);
 @import url(index.section-benefits.css);
+@import url(index.section-testimonials.partial.css);
