was styled the header of section "our team"

--- a/css/about_us.css
+++ b/css/about_us.css
@@ -3,3 +3,4 @@
 @import url(global.css);
 @import url(about_us.section-our_events.css);
 @import url(about_us.section-our_partners.css);
+@import url(about_us.section-our_team.css);
