change font-family for welcom-card blocks to test

--- a/css/index.header-welcomepage.partial.css
+++ b/css/index.header-welcomepage.partial.css
@@ -32,7 +32,7 @@
 }
 
 .header-card__item {
-    font-family: sans-serif;
+    font-family: "Spectral",serif;
     text-align: left;
     font-size: 20px;
 }
