changed path to img in header

--- a/css/index.css
+++ b/css/index.css
@@ -9,7 +9,7 @@
 @import url(index.section-testimonials.partial.css);
 
 header {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('/img/header.menu/header-cover.jpg');
+    background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('../img/header.menu/header-cover.jpg');
     background-size: cover;
     background-position: center;
     height: 1100px;
