modified font-size in welcome-text block

--- a/css/index.header-welcomepage.partial.css
+++ b/css/index.header-welcomepage.partial.css
@@ -10,7 +10,7 @@
 .welcome-text__enjoy {
     margin-top: 20px;
     display: block;
-    font-family: s"Spectral",serif;
+    font-family: "Spectral",serif;
     text-align: center;
     color: white;
     font-size: 72px;
