--- a/css/index.section-categories.partial.css
+++ b/css/index.section-categories.partial.css
@@ -1,32 +1,58 @@
 .section-categories {
     padding: 110px 0px 30px;
+    background-image: url(../img/img_section-categories/categories-wallper.png);
+    background-size: cover;
+    background-position: top;
 }
 
-.categories__text{
+.categories__content {
     padding: 90px 0px 30px;
 }
 
+.categories__text {
+    padding: 0px 24px;
+}
+
 .categories__title {
+
     color: #bc6e44;
-    font:spectral;
+    font: spectral;
     font-size: inherit;
 }
+
 .categories__description {
+    display: flex;
     font-family: Cormorant Infant;
     font-size: 52px;
     color: #2a2824;
 }
-.categories__action{
+
+.categories__action {
+    display: flex;
     color: #837d71;
 }
-.categories__action_list{
-    flex: auto;
+
+.categories__action_list {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    text-emphasis-color: #837d71;
+    flex: 1;
     color: #544e4c;
     padding: 20px 20px 20px;
     font-family: Cormorant Infant;
     font-size: 36px;
 }
-.categories__additional-info{
+
+.categories__link {
+    text-decoration: underline;
+    color: #2a2824;
+    display: flex;
+    flex: 3;
+}
+
+.categories__additional-info {
+    display: flex;
     color: #837d71;
     font-family: spectral;
     font-size: 17px;
@@ -35,3 +61,43 @@
     margin-left: 40px;
     margin-right: 40px;
 }
+
+
+
+
+.section-categories__items {
+    padding: 30px 0px 90px;
+    display: flex;
+    flex: content;
+}
+
+.section-categories__item {
+    padding: 10px 20px;
+    background-color: #ffffff;
+    display: grid;
+    grid-template-columns: auto;
+    flex-direction: row;
+    gap: 10px;
+}
+
+.section-categories__item-image {
+    width: 70px;
+    height: 70px;
+}
+
+.section-categories__item-title {
+    display: flex;
+    flex-direction: row;
+    font-family: Cormorant Infant;
+    font-weight: 500;
+    font-size: 26px;
+    color: #2a2824;
+}
+
+.section-categories__item-description {
+    display: flex;
+    flex-direction: row;
+    color: #837d71;
+    font-family: spectral;
+}
+
