--- a/css/index.css
+++ b/css/index.css
@@ -7,6 +7,7 @@
 @import url(index.section-categories.partial.css);
 @import url(index.section-benefits.css);
 @import url(index.section-testimonials.partial.css);
+@import url(index.section-blog.partial.css);
 
 header {
     background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('../img/header.menu/header-cover.jpg');
