--- a/css/global.css
+++ b/css/global.css
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Cormorant+Infant:wght@300;400;500&family=Cormorant+Upright&family=Spectral:wght@300;400;500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Spectral:ital,wght@0,700;1,300&display=swap');
+@import url("https://fonts.googleapis.com/css?family=Roboto&display=swap");
+
 * {
     box-sizing: border-box;
     margin: 0;
