--- a/css/common.header-menu.partial.css
+++ b/css/common.header-menu.partial.css
@@ -1,3 +1,8 @@
+.header__menu, .welcome-text {
+    max-width: 1200px;
+    margin: auto;
+}
+
 .header__main-logo {
     width: 100px;
     height: 100px;
@@ -20,7 +25,6 @@
 }
 
 .header__menu-link {
-    display: flex;
     justify-content: space-around;
     font-family: "Spectral", serif, bold;
     color: rgb(162, 169, 173);
