--- a/css/index.css
+++ b/css/index.css
@@ -11,6 +11,6 @@ header {
     background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('../img/header.menu/header-cover.jpg');
     background-size: cover;
     background-position: center;
-    height: 1100px;
+    min-height: 1100px;
     color: var(--text-color);
 }
