--- a/css/index.header-welcomepage.partial.css
+++ b/css/index.header-welcomepage.partial.css
@@ -1,7 +1,7 @@
 .welcome-text__main {
     margin-top: 200px;
     display: block;
-    font-family: "Spectral",serif;
+    font-family: "Spectral", serif;
     text-align: center;
     color: var(--title-color);
     font-size: 11px;
@@ -10,7 +10,7 @@
 .welcome-text__enjoy {
     margin-top: 20px;
     display: block;
-    font-family: "Spectral",serif;
+    font-family: "Spectral", serif;
     text-align: center;
     color: white;
     font-size: 72px;
@@ -19,20 +19,20 @@
 .welcome-text__invitation-visit {
     margin-top: 30px;
     display: block;
-    font-family: "Spectral",serif;
+    font-family: "Spectral", serif;
     text-align: center;
     color: white;
     font-size: 13px;
 }
 
 .header-card {
-    display: flex;
-    justify-content: space-around;
+    display: grid;
+    gap: 5px;
     margin-top: 300px;
 }
 
 .header-card__item {
-    font-family: "Spectral",serif;
+    font-family: "Spectral", serif;
     text-align: left;
     font-size: 20px;
 
@@ -40,7 +40,7 @@
         text-decoration: underline;
         text-decoration-thickness: 2.5px;
 
-        .header-card__item-child::after {
+        .header-card__item-child:after {
             content: "→";
             text-decoration: none;
         }
@@ -65,5 +65,23 @@
     display: block;
     margin-top: 13px;
     border-top: 1px solid var(--text-color);
-    width: 100%;
+    width: 70%;
+}
+
+@media (min-width: 600px) {
+    .header-card {
+        grid-template-columns: 1fr 1fr;
+    }
+}
+
+@media (min-width: 900px) {
+    .header-card {
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+
+@media (min-width: 1200px) {
+    .header-card {
+        grid-template-columns: repeat(4, 1fr);
+    }
 }
