add css style for come-vist-us and bit wineclub.get-your-membrship...

--- a/css/index.css
+++ b/css/index.css
@@ -3,3 +3,5 @@
 @import url(global.css);
 @import url(index.section-categories.partial.css);
 @import url(index.section-benefits.css);
+@import url(index.section-come-visit-us.partial.css);
+@import url(wineclub.get-your-membership-right-now.partial.css);
