--- a/css/global.css
+++ b/css/global.css
@@ -12,12 +12,14 @@
     scroll-behavior: smooth;
     --title-color:#bc6e44;
     --text-color:#837d71;
+    font-family: "Spectral", serif;
 }
 
 img {
     display: block;
     width: 100%;
 }
+
 .container {
     max-width: 1200px;
     margin: auto;
