add css and media query

--- a/css/global.css
+++ b/css/global.css
@@ -12,6 +12,7 @@
     scroll-behavior: smooth;
     --title-color:#bc6e44;
     --text-color:#837d71;
+    --text-button-color:#fff;
     font-family: "Spectral", serif;
 }
 
