--- a/css/contact_us.section-distribution.css
+++ b/css/contact_us.section-distribution.css
@@ -1,5 +1,19 @@
+.distribution{
+  background-image: url(../img/img_contact_us.section-destribution/background.svg);
+  background-size: cover;
+  padding: 110px 0;
+
+
+}
+.distribution__header{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 20px;
+  text-align: center;
+  margin-bottom: 50px;
+}
 .distribution__title {
-  font-family: "Spectral", serif;
   font-size: 12px;
   letter-spacing: 2.4px;
   color: var(--title-color);
@@ -10,45 +24,54 @@
   font-weight: 400;
 }
 .distribution__description {
-  font-family: "Spectral", serif;
   font-size: 19px;
   color: var(--text-color);
+}
+.distribution__list{
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 30px;
+ padding: 0 100px;
 }
 .distribution__item {
   width: 266px;
   height: 195px;
   padding: 30px;
   border: 1px solid rgb(248, 244, 244);
-  margin: 15px;
+  text-align: center;
 }
 .distribution__item-title {
-  font-family: "Spectral", serif;
   font-size: 19px;
   font-weight: 400;
   color: rgb(84, 78, 76);
 }
 .distribution__item-location {
-  font-family: "Spectral", serif;
   font-size: 17px;
   color: var(--title-color);
   font-weight: 300;
   font-style: italic;
+  margin: 20px 0;
 }
 .distribution__item-contact,
 .distribution__item-email,
 .distribution__footer-text {
-  font-family: "Spectral", serif;
   font-size: 17px;
   font-weight: 300;
   color: var(--text-color);
 }
+.distribution__footer{
+  margin-top: 50px;
+  padding: 0 100px;
+
+}
 .distribution__footer-warning {
-  font-family: "Spectral", serif;
   font-size: 15px;
   font-weight: 300;
   font-style: italic;
   color: var(--text-color);
+  padding-top: 20px;
 }
 .distribution__footer-star {
   color: var(--title-color);
+ 
 }
