modified margin welcome-text (test)

--- a/css/index.header-welcomepage.partial.css
+++ b/css/index.header-welcomepage.partial.css
@@ -1,5 +1,5 @@
 .welcome-text__main {
-    margin-top: 200px;
+    margin-top: 20%;
     display: block;
     font-family: "Spectral", serif;
     text-align: center;
