--- a/css/about_us.section-our_events.css
+++ b/css/about_us.section-our_events.css
@@ -1,54 +1,55 @@
-.events-header__title{
-    font-family: "Spectral", serif;
-    font-size: 12px;
-    letter-spacing: 2.4px;
-    color: var(--title-color);
+.events-header__title {
+  font-family: "Spectral", serif;
+  font-size: 12px;
+  letter-spacing: 2.4px;
+  color: var(--title-color);
 }
-.events-header__description{
-    font-family: "Cormorant Infant", serif;
-    font-size: 52px;
-    font-weight: 400;
+.events-header__description {
+  font-family: "Cormorant Infant", serif;
+  font-size: 52px;
+  font-weight: 400;
 }
-.events-header__description-text{
-    font-family: "Spectral", serif;
-    font-size: 19px;
-    color: var(--text-color);
+.events-header__description-text {
+  font-family: "Spectral", serif;
+  font-size: 19px;
+  color: var(--text-color);
 }
-.event-details{
-    border-bottom: 1px solid #faf8f2;
+.event-details {
+  border-bottom: 1px solid #faf8f2;
 }
-.event-details__title{
-    font-family: "Cormorant Infant", serif;
-    font-size: 28px;
-    font-weight: 400;
+.event-details__title {
+  font-family: "Cormorant Infant", serif;
+  font-size: 28px;
+  font-weight: 400;
 }
-.event-details__date, .event-details__time{
-    font-family: "Spectral", serif;
-    font-style: italic;
-    font-size: 17px;
-    font-weight: 300;
-    color: var(--text-color);
+.event-details__date,
+.event-details__time {
+  font-family: "Spectral", serif;
+  font-style: italic;
+  font-size: 17px;
+  font-weight: 300;
+  color: var(--text-color);
 }
-.contact-icon__image{
-    width: 26px;
-    height: 26px;
+.contact-icon__image {
+  width: 26px;
+  height: 26px;
 }
-.contact-details__label{
-    font-family: "Spectral", serif;
-    font-size: 12px;
-    font-weight: 700;
-    color: var(--text-color);
-    text-transform: uppercase;
-    letter-spacing: 2.4px;
+.contact-details__label {
+  font-family: "Spectral", serif;
+  font-size: 12px;
+  font-weight: 700;
+  color: var(--text-color);
+  text-transform: uppercase;
+  letter-spacing: 2.4px;
 }
-.contact-details__info{
-    font-family: "Spectral", serif;
-    font-size: 17px;
-    color: var(--text-color);
+.contact-details__info {
+  font-family: "Spectral", serif;
+  font-size: 17px;
+  color: var(--text-color);
 }
-.distribution__footer-warning{
-    font-family: "Spectral", serif;
-    font-size: 15px;
-    color: var(--text-color);
-    font-style: italic;
+.distribution__footer-warning {
+  font-family: "Spectral", serif;
+  font-size: 15px;
+  color: var(--text-color);
+  font-style: italic;
 }
