--- a/css/contact_us.css
+++ b/css/contact_us.css
@@ -1,3 +1,12 @@
 @import url(global.css);
 @import url(contact_us.header-hero.css);
 @import url(contact_us.section-distribution.css);
+@import url(common.header-address.partial.css);
+@import url(common.header-menu.partial.css);
+
+header {
+    background-image: url('../img/img_contact_us-header/grape-photo.jpeg');  
+    background-size: cover;
+    background-position: center;
+    min-height: 468px;
+}
