--- a/css/index.css
+++ b/css/index.css
@@ -8,6 +8,8 @@
 @import url(index.section-blog.partial.css);
 @import url(index.section-come-visit-us.partial.css);
 @import url(wineclub.get-your-membership-right-now.partial.css);
+/* @import url(contact_us.section-distribution.partial.html); */
+
 header {
     background-image: linear-gradient(rgba(42, 40, 36, 0.85), rgba(42, 40, 36, 0.6)), url('../img/header.menu/header-cover.jpg');
     background-size: cover;
