--- a/css/common.header-address.partial.css
+++ b/css/common.header-address.partial.css
@@ -3,7 +3,7 @@
     justify-content: space-between;
     width: 100%;
     background-color: black;
-    height: 52px;
+    min-height: 52px;
     opacity: 0.5;
 }
 
