--- a/css/global.css
+++ b/css/global.css
@@ -14,6 +14,7 @@
     --title-color:#bc6e44;
     --text-color:#837d71;
     --text-button-color:#fff;
+    --background-color: #fcfaf6;
     font-family: "Spectral", serif;
 }
 
