--- a/css/contact_us.css
+++ b/css/contact_us.css
@@ -3,9 +3,9 @@
 @import url(contact_us.section-distribution.css);
 @import url(common.header-address.partial.css);
 @import url(common.header-menu.partial.css);
-
+@import url(contact_us.section-distribution.css);
 header {
-    background-image: linear-gradient(rgba(42, 40, 36, 0.85), rgba(42, 40, 36, 0.6)), url('../img/img_contact_us-header/grape-photo.jpeg');  
+    background: linear-gradient(rgba(42, 40, 36, 0.85), rgba(42, 40, 36, 0.6)), url('../img/img_contact_us-header/grape-photo.jpeg');  
     background-size: cover;
     background-position: center;
     min-height: 468px;
