--- a/css/about_us.css
+++ b/css/about_us.css
@@ -1,4 +1,6 @@
 @import url(global.css);
+@import url(common.header-address.partial.css);
+@import url(common.header-menu.partial.css);
 @import url(about_us.section-our_events.css);
 @import url(about_us.section-our_partners.css);
 @import url(about_us.section-our_team.css);
