changes to be committed:     modified:   css/global.css     modified:   css/index.section-testimonials.partial.css     modified:   index.section-testimonials.partial.html

--- a/css/global.css
+++ b/css/global.css
@@ -13,6 +13,7 @@
     scroll-behavior: smooth;
     --title-color:#bc6e44;
     --text-color:#837d71;
+    --data-color:#544E4C;
     --text-button-color:#fff;
     --background-color: #fcfaf6;
     font-family: "Spectral", serif;
