--- a/css/index.section-testimonials.partial.css
+++ b/css/index.section-testimonials.partial.css
@@ -34,10 +34,15 @@
 }
 
 .testimonial__img {
-  width: 100px;
-  height: 100px;
+  width: 70px;
+  height: 70px;
   border-radius: 50%;
   margin-bottom: 20px;
+}
+
+.testimonial__customer {
+  font-size: 24px;
+  margin-bottom: 10px;
 }
 
 .testimonial__comment {
@@ -45,4 +50,9 @@
   color: var(--text-color);
   margin-bottom: 20px;
   max-width: 700px;
+}
+
+.testimonial__date{
+    font-size: 12px;
+    color: var(--data-color);
 }
