--- a/css/index.section-testimonials.partial.css
+++ b/css/index.section-testimonials.partial.css
@@ -4,7 +4,8 @@
   align-items: center;
   text-align: center;
   padding: 50px 15px;
-  background-color: #f7f7f7;
+  background-color: var(--background-color);
+  margin-top: 30px;
 }
 
 .testimonials-block__title {
@@ -29,7 +30,6 @@
   align-items: center;
   text-align: center;
   padding: 50px;
-  background-color: #f7f7f7;
   min-height: 100%;
 }
 
@@ -52,7 +52,144 @@
   max-width: 700px;
 }
 
-.testimonial__date{
-    font-size: 12px;
-    color: var(--data-color);
+.testimonial__date {
+  font-size: 12px;
+  color: var(--data-color);
+}
+
+.events {
+  background-color: var(--background-color);
+  margin-bottom: 30px;
+}
+
+.events__row {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.events__item {
+  p {
+    font-size: 17px;
+    color: var(--text-color);
+    font-family: "Spectral", serif;
+  }
+
+  img {
+    margin-bottom: 15px;
+  }
+
+  padding: 0 20px 20px 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  min-height: 100%;
+}
+
+@media (min-width: 576px) {
+  .testimonials {
+    padding: 20px 15px;
+    margin-top: 60px;
+  }
+
+  .testimonials-block__text {
+    font-size: 42px;
+  }
+
+  .testimonials-block__subtitle {
+    font-size: 21px;
+  }
+
+  .testimonial {
+    padding: 70px;
+  }
+
+  .testimonial__img {
+    width: 80px;
+    height: 80px;
+  }
+
+  .testimonial__customer {
+    font-size: 28px;
+  }
+
+  .testimonial__comment {
+    font-size: 18px;
+  }
+
+  .testimonial__date {
+    font-size: 13px;
+  }
+
+  .events__row {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  .events__item {
+    .events__item--img {
+        max-width: 200px;
+        max-height: 200px;
+    }
+
+    height: 100%;
+    padding: 20px;
+  }
+}
+
+@media (min-width: 768px) {
+  .testimonials {
+    padding: 20px 15px;
+    margin-top: 90px;
+  }
+
+  .testimonials-block__text {
+    font-size: 48px;
+  }
+
+  .testimonials-block__subtitle {
+    font-size: 24px;
+  }
+
+  .testimonial {
+    padding: 100px;
+  }
+
+  .testimonial__img {
+    width: 100px;
+    height: 100px;
+  }
+
+  .testimonial__customer {
+    font-size: 32px;
+  }
+
+  .testimonial__comment {
+    font-size: 20px;
+  }
+
+  .testimonial__date {
+    font-size: 14px;
+  }
+
+  .events__item {
+    .events__item--img {
+        min-width: 150px;
+        min-height: 150px;
+        max-width: 200px;
+        max-height: 200px;
+    }
+
+    max-height: 100%;
+    padding: 20px;
+  }
+}
+
+
+@media (min-width: 978px) {
+    .events__row {
+        flex-wrap: nowrap;
+      }
 }
