--- a/css/about_us.section-our_events.css
+++ b/css/about_us.section-our_events.css
@@ -1,50 +1,47 @@
 .events {
-  background-color: var( --background-color);
-  padding: 110px 100px;
-
+  background-color: var(--background-color);
+  padding: 90px 24px;
 }
-.event{
-  display: grid;
-  grid-template-columns: 1fr 1fr;
+
+.event {
   margin-top: 50px;
 }
-.event-left {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  
-}
-.event-section {
-display: flex;
-}
+
 .events-header {
-  text-align: center;
+  text-align: start;
 }
+
 .events-header__title {
   font-family: "Spectral", serif;
   font-size: 12px;
   letter-spacing: 2.4px;
   color: var(--title-color);
 }
+
 .events-header__description {
   font-family: "Cormorant Infant", serif;
-  font-size: 52px;
+  font-size: 38px;
   font-weight: 400;
+  padding: 15px 0;
 }
+
 .events-header__description-text {
   font-family: "Spectral", serif;
   font-size: 19px;
   color: var(--text-color);
 }
+
 .event-details {
   border-bottom: 1px solid rgba(0, 0, 0, 0.06);
-  
 }
+
 .event-details__title {
   font-family: "Cormorant Infant", serif;
   font-size: 28px;
   font-weight: 400;
-  margin-bottom: 20px;
+  padding-top: 15px;
 }
+
 .event-details__date,
 .event-details__time {
   font-family: "Spectral", serif;
@@ -54,10 +51,21 @@ display: flex;
   color: var(--text-color);
 }
 
+.event-details__time {
+  padding-bottom: 15px;
+}
+
+.contact {
+  display: flex;
+  padding: 20px;
+}
+
 .contact-icon__image {
   width: 26px;
   height: 26px;
+  margin-right: 20px;
 }
+
 .contact-details__label {
   font-family: "Spectral", serif;
   font-size: 12px;
@@ -66,14 +74,48 @@ display: flex;
   text-transform: uppercase;
   letter-spacing: 2.4px;
 }
+
 .contact-details__info {
   font-family: "Spectral", serif;
   font-size: 17px;
   color: var(--text-color);
 }
+
 .distribution__footer-warning {
   font-family: "Spectral", serif;
   font-size: 15px;
   color: var(--text-color);
   font-style: italic;
+}
+.image-container{
+ object-fit: cover;
+ object-position: 80.713% 0%;
+}
+
+
+@media (min-width: 768px) and (max-width:1199) {
+  .events {
+    padding: 40px 100px;
+  }
+
+  .event {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+
+  .event-left {
+    display: flex;
+    gap: 60px;
+  } 
+
+  .events-header {
+    text-align: center;
+  }
+
+  .events-header__description {
+    font-size: 52px;
+  }
+  .image-container{
+    margin-left: 50px;
+  }
 }
