--- a/css/about_us.section-our_events.css
+++ b/css/about_us.section-our_events.css
@@ -81,6 +81,8 @@
   font-style: italic;
 }
 .image-container {
+  width: 100%;
+  height: 100%;
   object-fit: cover;
 }
 @media (min-width: 768px) {
