Add description-text-color variable

--- a/css/global.css
+++ b/css/global.css
@@ -16,6 +16,7 @@
     --data-color:#544E4C;
     --text-button-color:#fff;
     --background-color: #fcfaf6;
+    --description-text-color: #2a2824;
     font-family: "Spectral", serif;
 }
 
