--- a/css/index.section-categories.partial.css
+++ b/css/index.section-categories.partial.css
@@ -9,7 +9,7 @@
   --color-button-background: var(--color-accent);
   --color-button-text: #ffffff;
 }
-
+  
 .section-categories {
   padding: 110px 0 30px;
   background-image: url(../img/img_section-categories/categories-wallper.png);
@@ -85,9 +85,9 @@
   max-height: 20%;
   padding: 20px;
   display: flex;
-  flex-direction: column;
   justify-items: center;
-  justify-content: space-between;
+  justify-content: flex-start;
+  flex-direction: column;
 }
 
 .section-categories__item-image {
