--- a/css/index.section-come-visit-us.partial.css
+++ b/css/index.section-come-visit-us.partial.css
@@ -3,7 +3,8 @@
     min-height: 400px;
     height: 100vh;
     background-image: url(../img/background_come-visit-us.jpg);
-    background-size: 100%;
+    background-attachment: fixed;
+    background-size: cover;
     display:flex;
     justify-content: left;
     align-items: left;
@@ -14,25 +15,26 @@
     background-color: white;
     padding: 31px;
     margin: 10% 10%;
+    height: fit-content;
     max-width: 400px;
-    max-height: 400px;
+    max-height: 600px;
     min-width: 220px;
 }
 .wine-tastings__small--title{
     font-size: 12px;
     text-align: left;
     letter-spacing: 2.4px;
-    font-family: serif;
+    font-family: "Spectral" , serif;
     color:rgb(188, 110, 68);
 }
 .wine-tastings__title{
     font-size: 52px;
-    font-family: serif;
+    font-family: "Spectral" , serif;
     text-align: left;
 }
 .wine-tastings__text-block{
     font-size: 17px;
     color: rgb(131, 125, 113);
-    font-family: serif;
+    font-family: "Spectral" , serif;
     text-align: left;
 }
