relocated the image

--- a/css/about_us.section-our_team.css
+++ b/css/about_us.section-our_team.css
@@ -5,6 +5,7 @@
     color: #bc6e44;
 }
 .out-team-content{
+    background-image: url(/img/img_about_us_our_team/`);
     display: flex;
 }
 .our_team-header-main_text{
