--- a/css/index.section-categories.partial.css
+++ b/css/index.section-categories.partial.css
@@ -77,6 +77,8 @@
   padding: 30px 0 90px;
   display: flex;
   justify-content: space-around;
+  flex-wrap: wrap;
+  gap: 10px 20px;
 }
 
 .section-categories__item {
@@ -84,10 +86,7 @@
   max-width: 20%;
   max-height: 20%;
   padding: 20px;
-  display: flex;
   justify-items: center;
-  justify-content: flex-start;
-  flex-direction: column;
 }
 
 .section-categories__item-image {
